@@ -2,4 +2,4 @@ FROM openjdk:8-jre-alpine
 WORKDIR /app
 COPY build/libs .
 RUN ls /app
-ENTRYPOINT ["java", "-cp", "*", "boston.convertdata.Application"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-cp", "*", "boston.convertdata.Application"]
